# serializer version: 1
# name: test_dir
  Namespace(dir=True, inputFile=['dir'], templates_dir=None, output='.', no_warnings=False, verbose=False)
# ---
# name: test_infile
  Namespace(dir=False, inputFile=['inputFile'], templates_dir=None, output='.', no_warnings=False, verbose=False)
# ---
# name: test_readfilesDir
  tuple(
    list([
      'testFolder/sites/index.html',
      'testFolder/sites/myRack.html',
      'testFolder/sites/bonescrawlhome.html',
      'testFolder/sites/bonesrunhome.html',
      'testFolder/sites/bonesboundhome.html',
      'testFolder/sites/report.html',
      'testFolder/sites/template.html',
      'testFolder/sites/bonescallhome.html',
      'testFolder/sites/404.html',
      'testFolder/sites/emacsFiles.html',
      'testFolder/sites/Power7.html',
      'testFolder/sites/contact.html',
    ]),
    list([
      'outputLocation/index.html',
      'outputLocation/myRack.html',
      'outputLocation/bonescrawlhome.html',
      'outputLocation/bonesrunhome.html',
      'outputLocation/bonesboundhome.html',
      'outputLocation/report.html',
      'outputLocation/template.html',
      'outputLocation/bonescallhome.html',
      'outputLocation/404.html',
      'outputLocation/emacsFiles.html',
      'outputLocation/Power7.html',
      'outputLocation/contact.html',
    ]),
  )
# ---
# name: test_readfilesFile
  tuple(
    tuple(
      list([
      ]),
      list([
      ]),
    ),
    'testFolder/templates/',
    25,
  )
# ---
# name: test_templates_dir
  Namespace(dir=True, inputFile=['dir'], templates_dir=['templates'], output='.', no_warnings=False, verbose=False)
# ---
# name: test_templates_infile
  Namespace(dir=False, inputFile=['inputFile'], templates_dir=['template'], output='.', no_warnings=False, verbose=False)
# ---
# name: test_templates_output_dir
  Namespace(dir=True, inputFile=['dir'], templates_dir=['templates'], output=['output'], no_warnings=False, verbose=False)
# ---
# name: test_templates_output_infile
  Namespace(dir=False, inputFile=['inputFile'], templates_dir=['template'], output=['output'], no_warnings=False, verbose=False)
# ---
# name: test_verbose
  Namespace(dir=False, inputFile=['inputFile'], templates_dir=None, output='.', no_warnings=False, verbose=True)
# ---
